<resources>
    <string name="app_name">Farm Machine Management</string>
    <string name="sub_app_name">Sugarcane</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_google_mail">Log in with Google mail</string>
    <string name="login_failed">"Login failed,please check email and password"</string>
    <string name="login_success">Hi,</string>
    <string name="register"><u>Click here to SIGN UP</u></string>
    <string name="dash_page">Dashboard</string>

    <string name="farmer_page">Farmer Info</string>
    <string name="survey_queue_page">Survey &amp; Queue</string>
    <string name="edit_farmer_page">Edit farmer information</string>
    <string name="edit_survey_page">Edit survey queue</string>
    <string name="zone_page">Zone</string>
    <string name="cost_page">Cost Info</string>
    <string name="profile_page">Profile</string>
    <string name="manage_employee">Management Employee</string>
    <string name="add_emp_page">Add Employee Page</string>
    <string name="logout">Log out</string>

    <string name="error_blank">Can\'t be blank</string>
    <string name="error_suggest">You have not fill out staff id or password</string>
    <string name="selected_depart">Select department</string>
    <string name="survey_emp">Explorer</string>
    <string name="cutter_emp">Cutter</string>
    <string name="tractor_emp">Tractor</string>
    <string name="assert_rm">Do you want to remove this account?</string>

    <string name="photo">Edit photo</string>
    <string name="title">Title</string>
    <string name="first_name">First name</string>
    <string name="last_name">First name</string>
    <string name="staff_id">Staff id</string>
    <string name="company">Company</string>
    <string name="depart">Department</string>
    <string name="search_button">Search</string>
    <string name="name">Name:</string>
    <string name="farmer_id">Farmer ID:</string>
    <string name="employee_id">ID:</string>
    <string name="employee_password">Password:</string>
    <string name="home">Home address:</string>
    <string name="address">Home:</string>
    <string name="sub_district">Sub-district:</string>
    <string name="district">District:</string>
    <string name="province">Province:</string>
    <string name="zip_code">Zip code:</string>
    <string name="farmer_tel">Farmer tel:</string>
    <string name="chief_name">District chief:</string>
    <string name="chief_tel">District chief tel:</string>

    <string name="login_button">Login</string>
    <string name="show_button">Show detail</string>
    <string name="hide_button">Hide detail</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="change_button">Change</string>
    <string name="save_button">Save</string>
    <string name="update_button">Update</string>
    <string name="compare_button">Compare with estimated cost</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <string name="plant">Farmer\'s Plantation</string>
    <string name="plant_id">Plant ID:</string>
    <string name="survey_date">Survey date:</string>
    <string name="qc">QC:</string>
    <string name="output">Output(tons):</string>
    <string name="n_a">N/A</string>

    <string name="zone_id">Zone ID:</string>
    <string name="cane_company">Cane company</string>
    <string name="plant_address">Plantation address</string>
    <string name="plant_info">Plantation Info</string>
    <string name="explorer_chief">Explorer chief</string>
    <string name="explorer_chief_tel">Explorer tel</string>
    <string name="grade">Grade</string>
    <string name="qc_output">QC</string>
    <string name="title_pin">Here!</string>
    <string name="evaluation">Evaluation Output</string>
    <string name="no_evaluation">No evaluation</string>
    <string name="cut_id">Cutter ID:</string>
    <string name="tractor_id">Tractor ID:</string>
    <string name="total_cut">Total weight and cost event</string>
    <string name="total_time">Total time and cost event</string>
    <string name="cut_no">Cutter order no:</string>
    <string name="tractor_no">Tractor order no:</string>
    <string name="harvest_date">Harvest date:</string>
    <string name="tractor_date">Tractor date:</string>
    <string name="weight">Weight</string>
    <string name="work_time">Working time</string>
    <string name="fuel_content">Fuel content</string>
    <string name="fuel_cost">Fuel cost</string>
    <string name="repair">Repair</string>
    <string name="compare_title">Real compare with estimated cost</string>

    <string name="unit">unit</string>
    <string name="ton_unit">ton</string>
    <string name="hour_unit">hour</string>
    <string name="litre_unit">litre</string>
    <string name="baht_unit">baht</string>
    <string name="events">Events</string>
    <string name="fill_fuel">Fill fuel</string>
    <string name="harvest">Harvest</string>

    <string name="event_detail">Event:</string>
    <string name="content">Content:</string>
    <string name="cost">Cost:</string>

    <string name="survey_tap">SURVEY</string>
    <string name="harvest_tap">HARVEST QUEUE</string>
    <string name="tractor_tap">TRACTOR QUEUE</string>
    <string name="harvest_cost">HARVEST</string>
    <string name="tractor_cost">TRACTOR</string>

    <string name="cost_info">Cost Information</string>
    <string name="harvest_summary">Real weight and cost summary</string>
    <string name="tractor_summary">Real time and cost summary</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="weight_unit">Weight (ton)</string>
    <string name="fuel_content_unit">Fuel_content (litre)</string>
    <string name="fuel_cost_unit">Fuel cost (baht)</string>
    <string name="repair_unit">Repair cost (baht)</string>
    <string name="work_time_unit">Working time (hour)</string>
    <string name="real">Real</string>
    <string name="estimate">Estimate</string>
    <string name="percent">Error</string>

    <string-array name="sort_by">
        <item>Farmer ID</item>
        <item>Plant ID</item>
    </string-array>

    <string-array name="grade">
        <item>None</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>

    <string-array name="real_qc">
        <item>Pass</item>
        <item>Decline</item>
        <item>No queue</item>
    </string-array>

    <string-array name="criteria">
        <item>1. ผลผลิตอ้อยในแปลง(ตัน/ไร่)</item>
        <item>2. ความยาวร่องอ้อย(เมตร)</item>
        <item>3. ระยะห่างระหว่างแถวอ้อย(เมตร)</item>
        <item>4.1 ความกว้างข้างแปลง(เมตร)</item>
        <item>4.2 ความกว้างหัวแปลง(เมตร)</item>
        <item>4.3 ความกว้างท้ายแปลง(เมตร)</item>
        <item>5. จำนวน ต้นไม้/ตอ/หิน</item>
        <item>6. สิ่งกีดขวางอื่นๆ</item>
        <item>7. ไม่เคยปลูกหรือเป็นแปลงยูคาเก่ามาก่อน</item>
        <item>8. พื้นร่องเรียบ</item>
        <item>9. การกลบโคน(เซนติเมตร)</item>
        <item>10. วัชพืช</item>
        <item>11. กออ้อยตั้งตรง/ไม่หักล้ม</item>
        <item>12. พื้นที่ไม่เอียง/ราบเรียบ</item>
        <item>13. ไม่มีน้ำแช่ขัง</item>
        <item>14. อ้อยร่องเดี่ยวหรือร่องคู่รถตัดตัดได้</item>
        <item>15. เส้นทางเข้าแปลงอ้อยสะดวก</item>
        <item>16. ระยะทางจากโรงงาน(กิโลเมตร)</item>
        <item>17. จำนวนพื้นที่(ไร่)</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
</resources>
