<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhiteBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/user"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/changePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            style="@style/SmallGreenDarkText"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/staffId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/staffIdData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/staff_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/titleData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/firstNameData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/lastNameData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/emailData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/companyData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/passwordData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                style="@style/MediumGreenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/save_button" />

            <Button
                android:id="@+id/cancelBtn"
                style="@style/MediumRedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/cancel_button" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>