<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            style="@style/SmallGrayLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/nameData"
            style="@style/MediumGrayLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/id"
            style="@style/SmallGrayLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/farmer_id" />

        <TextView
            android:id="@+id/idData"
            style="@style/MediumGrayLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/addressData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/subDtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/subDtName"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sub_district" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/districtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/districtName"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/district" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/provinceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/provinceName"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/province" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/zipCodeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/zipCode"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zip_code" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/farmerTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/farmerTelData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/farmer_tel" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/chiefName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/chiefNameData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chief_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/chiefTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:hintTextAppearance="@style/SmallGreenDarkText">

            <EditText
                android:id="@+id/chiefTelData"
                style="@style/MediumGrayLightText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chief_tel" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveButton"
            style="@style/MediumGreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/save_button" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>