<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/LargeDarkGrayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assert_rm" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/idLabel"
            style="@style/MediumGrayLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/employee_id" />

        <TextView
            android:id="@+id/idData"
            style="@style/MediumGrayLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/idLabel"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/passwordLabel"
            style="@style/MediumGrayLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/idLabel"
            android:layout_below="@id/idLabel"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/employee_password" />

        <TextView
            android:id="@+id/passwordData"
            style="@style/MediumGrayLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLabel"
            android:layout_toRightOf="@id/passwordLabel"
            android:padding="10dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesBtn"
            style="@style/MediumGreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/yes_button" />

        <Button
            android:id="@+id/noBtn"
            style="@style/MediumRedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/no_button" />
    </LinearLayout>
</LinearLayout>